# vision-transformer-from-scratch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: prepare_tiny_imagenet_200.py  training-GTSRB.sh  training-cifar-10.sh  training-cifar-100.sh
src/vision_transformer/cli/: main.py
src/vision_transformer/config/: dataset.py  experiment.py  loss.py  lr_schedular.py  lr_scheduler.py  model.py  optim.py  optimizer.py  training.py  transform.py  utils.py  vit.py
src/vision_transformer/data/: datasets.py  transforms.py  utils.py
src/vision_transformer/inference/: predict.py
src/vision_transformer/logger/: logger_factory.py
src/vision_transformer/model/: attention.py  embeddings.py  mlp_block.py  patch_embedding.py  transformer_encoder.py  transformer_encoder_block.py  utils.py  vision_transformer.py
src/vision_transformer/training/: checkpoint.py  losses.py  lr_scheduler.py  optim.py  train.py
src/vision_transformer/visualization/: attention_weights.py  positional_embedding.py  prediction.py  utils.py  visualize.py
tests/data/: test_dataset.py  test_transforms.py
tests/model/: test_cls_token_and_positional_embeddings.py  test_layers_mlp.py  test_multi_head_attention.py  test_patch_embedding.py  test_transformer_encoder.py  test_transformer_encoder_block.py  test_utils.py  test_vision_transformer.py
tests/training/: test_criterion.py  test_optim.py  test_scheduler.py
